                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-06-2006 fixed: <colordiffuse> didn't work for multiimage.
 - 21-06-2006 fixed: Speed up for party mode starting.
 - 21-06-2006 changed: ControlGroup(id).HasFocus() returns true if the current control is in that controlgroup.
 - 21-06-2006 fixed: Alignment of right items in listcontrolex
 - 21-06-2006 changed: <onclick> based on Skin variables should use the same format as the <label> tag - $INFO[Skin.String(blah)]
 - 21-06-2006 updated: ControlImage and ControlTextbox to accept keyword arguments. (matches other controls)
 - 21-06-2006 updated: some of the python documentation with examples
 - 20-06-2006 changed: "Query Info For All Albums" minor code cleanup and increased relevance % for better accuracy.
 - 20-06-2006 fixed: some language files contained &amp;gt; it should have been &gt; (>)
 - 20-06-2006 updated: Polish language file (Thnx to napek)
 - 20-06-2006 fixed: Typo in swedish strings.xml (Thanks Pike)
 - 20-06-2006 changed: Modified xboxmediacenter.xml and myprograms.xml/myvideos.xml to work with a default XBMC setup
                       ie using the name tags from an untouched xboxmediacenter.xml for the bookmarks in the
                       left hand side of My Videos/My Programs
 - 20-06-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 20-06-2006 updated: Finnish language file (Thnx to jutski)
 - 20-06-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 20-06-2006 updated: Italian language file (Thnx to kotix)
 - 20-06-2006 updated: Norwegian language file (Thnx to vnm)
 - 20-06-2006 updated: Turkish language file (Thnx to necipfazil)