@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-06-2006 added: Canadian region to the english language (Thanks to Midvalley)
  - 21-06-2006 fixed: <colordiffuse> didn't work for multiimage.
  - 21-06-2006 fixed: Speed up for party mode starting.
  - 21-06-2006 changed: ControlGroup(id).HasFocus() returns true if the current control is in that controlgroup.
